Reintroduce msg-body div and fix message overflow

--- a/scss/message/_message.scss
+++ b/scss/message/_message.scss
@@ -104,39 +104,42 @@
             cursor: pointer;
         }
 
-        &>.text {
-            color: var(--messageText);
-            font-size: 14px;
-            line-height: 18px;
-            text-align: start;
-
-            overflow-wrap: break-word;
-            word-wrap: break-word;
-            word-break: break-word;
-            white-space: pre-wrap;
-
-            a {
-                text-decoration: underline;
-                color: var(--messageTextLink);
+        .msg-body {
+            &.msg-body--clickable {
+               cursor: pointer;
             }
 
-            margin-right: 10px;
+            &>.text {
+                color: var(--messageText);
+                font-size: 14px;
+                line-height: 18px;
+                text-align: start;
 
-            .double-line-break {
-                height: 28px;
+                overflow-wrap: break-word;
+                word-wrap: break-word;
+                word-break: break-word;
+                white-space: pre-wrap;
+
+                a {
+                    text-decoration: underline;
+                    color: var(--messageTextLink);
+                }
+
+                margin-right: 10px;
+
+                .double-line-break {
+                    height: 28px;
+                }
+
+                .line-break {
+                    height: 14px;
+                }
+
+                .line-break:last-child {
+                    height: 0px;
+                }
             }
 
-            .line-break {
-                height: 14px;
-            }
-
-            .line-break:last-child {
-                height: 0px;
-            }
-
-            &.text--clickable {
-                cursor: pointer;
-            }
         }
     }
 
